test/sema/negative/super_traits2.impala
trait T {
    fn f(self: Self) -> Self;
}
trait U : T {
    fn f(self: Self) -> Self;
}
