test/sema/negative/super_traits2.out
super_traits2.impala:5 col 5 - 29: error: a method with this name already exists in a super trait.
